# compose-server

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.ipynb  docker-compose.yaml  env.yml  environment.yml  pyproject.toml
.github/: parse_container_version.py
.github/workflows/: deploy-base.yml  deploy-gateway.yml  deploy-microservices.yml  deploy-worker.yml  pipeline.yml
app/: DataService.js
assets/deployment/: compose.envoy.yml  envoy.yml
assets/dev/scripts/: install-smoldyn-mac-silicon.sh
assets/docker/: Dockerfile-base
assets/docker/scripts/: build_base.sh  build_image.sh  push_image.sh
client/: Dockerfile-client  handler.py  health.py  main.py  submit_runs.py
client/spec/: openapi_3_1_0_generated.yaml
common/hpc/: models.py
common/proto/: simulation.proto  simulation_pb2.py  simulation_pb2_grpc.py
gateway/: Dockerfile-gateway  main.py
gateway/handlers/: health.py  states.py  submit.py
gateway/spec/: openapi_3_1_0_generated.yaml
kustomize/: README.md  mysealedsecret.yaml
kustomize/base/: gateway.yaml  mongodb.yaml  worker.yaml
kustomize/config/compose/: shared.env
kustomize/config/dev/: shared.env
kustomize/overlays/compose/: compose-ingress.yaml  gateway-secrets.yaml  kustomization.yaml  secret-ghcr.yaml
server/: main.py
shared/: .env_template  connect.py  data_model.py  database.py  dynamic_env.py  environment.py  io.py  log_config.py  parse_proto.py  serial.py  utils.py  vivarium.py
shared/fixtures/: composition2.json  membrane_config.json  smoldyn_config.json
shared/handlers/: vivarium.py
shared/scripts/: entrypoint.sh  handle_env.sh
tests/: insert_test_data.py  test_dispatcher.py  test_worker.py
tests/test_fixtures/: composition.json  copasi_config.json  example_hybrid.json  membrane_composite.json  smoldyn-config.json  test-vivarium-id.txt  test_membrane_request2.json  test_request.json  test_request2.json  test_request_without_smoldyn.json  vivarium-example.json
tests/test_notebooks/: qaoa_process.ipynb  quantum.ipynb
worker/: Dockerfile-worker  dispatch.py  execute.py  job.original  main.py
worker/sim_runs/: data_generator.py  runs.py
worker/workers/: composition.py  runs.py
