[project]
name = "compose-server"
version = "0.0.1"
readme ="README.md"
description = "Backend for BioCompose: a microservices-based data service leveraging Kubernetes for efficient orchestration of bio-chemical simulation comparisons."
authors = [{name = "Alex Patrie", email = "alexanderpatrie@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "google-cloud-storage",
    "chardet",
    "fastapi",
    "python-multipart",
    "h5py",
    "python-dotenv",
    "python-libsbml",
    "pymongo",
    "biosimulator-processes",
    "imageio",
    "nbformat",
    "websockets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "deptry" ,
    "mypy",
    "pre-commit",
    "tox"
]

# also make sure to install readdy and pymem3dg:
# conda install -n bsp conda-forge::pymem3dg -y \
#     && conda install -n bsp conda-forge::readdy -y

[tool.poetry]
packages = [
    {include = "gateway"},
    {include = "shared"},
    {include = "worker"},
    {include = "common"}
]

# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["hatchling", "setuptools_scm"]
build-backend = "hatchling.build"

# [build-system]
# requires = ["scikit-build-core[conda]", "setuptools_scm", "hatchling"]
# build-backend = "scikit_build_core.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["gateway", "shared", "worker", "common", "client", "server"]

# [tool.hatch.envs.default]
# dependencies = [
#     "conda: numpy",
#     "conda: scipy",
#     "conda: matplotlib",
#     "conda: pybind11"
# ]

[tool.setuptools_scm]  # Required for automatic versioning
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
